# NewsBriefe_Backend

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  start_worker.sh
app/: main.py
app/api/v1/endpoints/: admin.py  routes.py
app/core/: cache.py  config.py  database.py  logging.py
app/models/: orm.py  schemas.py
app/services/: bedrock_summarizer.py  ingestion.py  repository.py  summarizer.py  translator.py
app/workers/: tasks.py
docker/: Dockerfile.worker
scripts/: 001_initial.py  002_add_is_breaking.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_services.py
