[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "newsbrief-backend"
version = "1.0.0"
description = "NewsBrief — voice-first global news API"
requires-python = ">=3.11"
dependencies = [
    # ── Web framework ─────────────────────────
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "python-multipart==0.0.12",

    # ── Database ──────────────────────────────
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",

    # ── Cache ─────────────────────────────────
    "redis[hiredis]==5.2.0",

    # ── Task queue ────────────────────────────
    "celery[redis]==5.4.0",
    "celery-redbeat==2.2.0",       # cron scheduling

    # ── AI / LLM ──────────────────────────────
    "anthropic==0.40.0",

    # ── Translation ───────────────────────────
    "deepl==1.19.1",

    # ── News sources ──────────────────────────
    "httpx==0.28.0",
    "feedparser==6.0.11",
    "newsapi-python==0.2.7",

    # ── Text processing ───────────────────────
    "langdetect==1.0.9",
    "scikit-learn==1.5.2",         # TF-IDF deduplication
    "numpy==2.1.3",

    # ── Config / validation ───────────────────
    "pydantic==2.10.2",
    "pydantic-settings==2.6.1",
    "python-dotenv==1.0.1",

    # ── Security ──────────────────────────────
    "slowapi==0.1.9",              # rate limiting

    # ── Monitoring ────────────────────────────
    "structlog==24.4.0",
    "sentry-sdk[fastapi]==2.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "httpx==0.28.0",
    "factory-boy==3.3.1",
    "ruff==0.8.1",
    "mypy==1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
