[project]
name = "newsbrief"
version = "1.0.0"
description = "NewsBrief API — AI-summarised multilingual news"
requires-python = ">=3.11"

dependencies = [
    # ── Web framework ──────────────────────────────────────
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "python-multipart==0.0.12",

    # ── Database ───────────────────────────────────────────
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",

    # ── Cache & task queue ─────────────────────────────────
    "redis[hiredis]==5.2.0",
    "celery[redis]==5.4.0",
    "celery-redbeat==2.2.0",

    # ── AI providers ───────────────────────────────────────
    "anthropic==0.49.0",            # updated — supports claude-sonnet-4
    "boto3==1.38.0",                # AWS Bedrock (DeepSeek R1)

    # ── Translation ────────────────────────────────────────
    "deepl==1.19.1",
    "httpx==0.28.0",

    # ── News ingestion ─────────────────────────────────────
    "feedparser==6.0.11",
    "newsapi-python==0.2.7",

    # ── NLP / deduplication ────────────────────────────────
    "langdetect==1.0.9",
    "scikit-learn==1.5.2",
    "numpy==2.1.3",

    # ── Config & validation ────────────────────────────────
    "pydantic==2.10.2",
    "pydantic-settings==2.6.1",
    "python-dotenv==1.0.1",

    # ── API utilities ──────────────────────────────────────
    "slowapi==0.1.9",

    # ── Observability ──────────────────────────────────────
    "structlog==24.4.0",
    "sentry-sdk[fastapi]==2.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "httpx==0.28.0",
    "factory-boy==3.3.1",
    "ruff==0.8.1",
    "mypy==1.13.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
